--- a/index.html
+++ b/index.html
@@ -1,14 +1,131 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Raafi-Rasyiid-Portofolio</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="content">
-                  There is it?
-            </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Infinity Projects</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment-hijri@2.1.2/moment-hijri.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+</head>
+<body>
+  <div class="container">
+    <aside class="sidebar" >
+      <div class="side-web-title">
+        <span class="titled">Raafi' Rasyiid</span>
+      </div>
+      <nav>
+        <ul>
+          <li>
+              <a href="#" data-page="home">
+                <img src="assets/icons8-home-32.png" alt="icons" width="32" height="32" style="vertical-align: middle; margin-right: 6px; background-color: aliceblue; border-radius: 15px;">
+              <span class="icon"></span>
+              <span class="label">Home</span>
+            </a>
+          </li>
+          <li>
+              <a href="#" data-page="about-contact">
+                <img src="assets/icons8-user-menu-male-32.png" alt="icons" width="32" height="32" style="vertical-align: middle; margin-right: 6px; background-color: aliceblue; border-radius: 15px;">
+              <span class="icon"></span>
+              <span class="label">About</span>
+            </a>
+          </li>
+          <li>
+              <a href="#" data-page="caseStudies">
+                <img src="assets/icons8-more-details-32.png" alt="icons" width="32" height="32" style="vertical-align: middle; margin-right: 6px; background-color: aliceblue; border-radius: 15px;">
+              <span class="icon"></span>
+              <span class="label">Portfolio</span>
+            </a>
+          </li>
+          <li>
+              <a href="#" data-page="contact">
+                <img src="assets/icons8-mail-32.png" alt="icons" width="32" height="32" style="vertical-align: middle; margin-right: 6px; background-color: aliceblue; border-radius: 15px;">
+              <span class="icon"></span>
+              <span class="label">Contact</span>
+            </a>
+          </li>
+          <li>
+              <a href="#" data-page="blog">
+                <img src="assets/icons8-faq-32.png" alt="icons" width="32" height="32" style="vertical-align: middle; margin-right: 6px; background-color: aliceblue; border-radius: 15px;">
+              <span class="icon"></span>
+              <span class="label">Blog</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <button id="toggle-theme" class="btn btn-primary">🌙 Dark Mode</button>
 
+      <div class="date-container">
+        <div id="masehiDate"></div>
+        <div id="hijriDate"></div>
+      </div>
+      
+    </aside>
+
+    <main class="content" style="text-align: justify; font-size: 0.875em;">
+      <div id="home" class="page active">
+        <div>
+          <h1>Home</h1>
+          <p>Welcome to my portfolio!</p>
         </div>
-    </body>
+      </div>
+      <div id="about-contact" class="page">
+        <!-- <div>
+          <h1>About</h1>
+          <p>I am a beginner web developer learning HTML and CSS.</p>
+        </div> -->
+      </div>
+      <div id="caseStudies" class="page">
+      </div>
+      <div id="contact" class="page">
+      </div>
+      <div id="blog" class="page">
+      </div>
+    </main>
+  </div>
+
+  <script src="script.js"></script>
+  <!-- call the about-contact.html -->
+  <script>
+    fetch('about-contact.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('about-contact').innerHTML = data;
+    })
+    .catch(err => console.error('Gagal memuat about', err));
+  </script>
+
+  <!-- call the latesworks.html -->
+  <script>
+    fetch('latesworks.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('caseStudies').innerHTML = data;
+    })
+    .catch(err => console.error('Gagal memuat porto', err));
+  </script>
+   
+  <!-- call the contact.html -->
+  <script>
+    fetch('contact.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('contact').innerHTML = data;
+    })
+    .catch(err => console.error('Gagal memuat contact', err));
+  </script>
+
+  <!-- call the blog.html -->
+  <script>
+    fetch('blog.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('blog').innerHTML = data;
+    })
+    .catch(err => console.error('Gagal memuat blog', err));
+  </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+</body>
 </html>
