--- a/about-contact.html
+++ b/about-contact.html
@@ -1,6 +1,7 @@
 <div class="box aboutMe-box">
     <h1 style="margin-bottom: -0.55%;">About me.</h1>
     <p style="margin-bottom: 3%; text-indent: 1em;">Wordpress developer.</p>
-    <p>I'm <strong>Raafi' Rasyiid</strong>, a 30 year old freelance WordPress guy from Indonesia. I love playing around with design, making smart and fun user interfaces, and building cool websites using whatever WordPress gives me or custom stuff.</p> 
+    <p>I'm <strong>Raafi' Rasyiid</strong>, 30 years old. I love experimenting with design, creating smart and enjoyable user interfaces, and building awesome websites using everything WordPress has to offer — or even custom features when needed.</p>
+    <p>I’ve been working with WordPress and Elementor for about five years, handling various projects ranging from landing pages, information systems, and payment gateways to company profiles.</p> 
     <p>Let’s make something awesome together!</p>
   </div>
