--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container">
+  <div class="container-satu">
     <aside class="sidebar" >
       <div class="side-web-title">
         <span class="titled">Raafi' Rasyiid</span>
