--- a/content.html
+++ b/content.html
@@ -15,7 +15,7 @@
     <div id="contact" class="page contact">
       <div class="box aboutMe-box">
         <h1>About me.</h1>
-        <p>Contact me at raafreak@gmail.com</p>
+        <p>Contact me at raafmedia42@gmail.com</p>
       </div>
       <div class="box contactMe-box">
         <h1>Let's talk..</h1>
@@ -23,4 +23,5 @@
       </div>
     </div>
   </main>
+
   
