--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <div class="box contactMe-box">
     <h1>Lest' talk..</h1>
     <p>New projects, freelance inquiry or even a coffee.</p>
-    <br><p>Contact me at raafreak@gmail.com</p>
+    <br><p>Contact me at raafmedia42@gmail.com</p>
   </div>
