--- a/latesworks.html
+++ b/latesworks.html
@@ -1,8 +1,9 @@
 <div class="mt-5">
   <div class="row">
     <div class="card col-sm-9" style="width: 18rem;">
+      <H1>Landing Pages</H1>
         <div class="card-body">
-            <h4 class="card-title">Home Page</h4>
+            <h4 class="card-title">Homepage Yayasan Cinta Sedekah</h4>
             <img src="/assets/img/homepage-CS.png" class="card-img-top" alt="...">
             <p class="card-text">This is the home page made by Me with team edited.</p>
             <a href="https://cintasedekah.org/" class="btn btn-primary">Go to site</a>
@@ -10,7 +11,7 @@
     </div>
     <div class="card col-sm-9" style="width: 18rem;">
         <div class="card-body">
-            <h4 class="card-title">Landing Page</h4>
+            <h4 class="card-title">Landing Page Qurban</h4>
             <img src="/assets/img/pagequrban-CS.png" class="card-img-top" alt="...">
         <p class="card-text">This is the Landing page.</p>
         <a href="https://cintasedekah.org/qurbanycs1446/" class="btn btn-primary">Go to site</a>
@@ -20,8 +21,9 @@
 <div class="mt-5">
   <div class="row">
     <div class="card col-6" style="width: 18rem;">
+      <H1>Mobile View</H1>
         <div class="card-body">
-            <h4 class="card-title">Mobile View</h4>
+            <h4 class="card-title">Homepages Yayasan Cinta Sedekah</h4>
             <img src="/assets/img/donasipalestina-CS.png" class="card-img-top" alt="...">
             <p class="card-text">This is the payment gateway.</p>
             <a href="https://cintasedekah.org/air-bersih/" class="btn btn-primary">Go to site</a>
@@ -37,3 +39,4 @@
     </div>
   </div>
 </div>
+
