--- a/latesworks.html
+++ b/latesworks.html
@@ -1,7 +1,7 @@
 <div class="mt-5">
   <div class="row">
-    <div class="card col-sm-9" style="width: 18rem;">
       <H1>Landing Pages</H1>
+    <div class="card col-sm-9" style="width: 18rem;">
         <div class="card-body">
             <h4 class="card-title">Homepage Yayasan Cinta Sedekah</h4>
             <img src="/assets/img/homepage-CS.png" class="card-img-top" alt="...">
@@ -20,11 +20,11 @@
 </div>
 <div class="mt-5">
   <div class="row">
-    <div class="card col-6" style="width: 18rem;">
       <H1>Mobile View</H1>
+    <div class="card col-6" style="width: 18rem;">
         <div class="card-body">
             <h4 class="card-title">Homepages Yayasan Cinta Sedekah</h4>
-            <img src="/assets/img/donasipalestina-CS.png" class="card-img-top" alt="...">
+            <img src="/assets/img/mobile-view.png" class="card-img-top" alt="...">
             <p class="card-text">This is the payment gateway.</p>
             <a href="https://cintasedekah.org/air-bersih/" class="btn btn-primary">Go to site</a>
         </div>
@@ -39,5 +39,6 @@
     </div>
   </div>
 </div>
+
 
 
