--- a/sidebar.html
+++ b/sidebar.html
@@ -1,6 +1,6 @@
 <!-- sidebar.html -->
 <aside class="sidebar">
-    <h2>Raafi' Rasyiid</h2>
+    <!-- <h2>Raafi' Rasyiid</h2> -->
     <nav>
       <ul>
         <li><a href="#" data-page="home">Home</a></li>
@@ -11,4 +11,5 @@
     </nav>
     <button id="toggle-theme" class="theme-toggle">🌙 Dark Mode</button>
   </aside>
+
   
