--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <div class="container-satu">
-    <aside class="sidebar" >
-      
+    <aside class="sidebar">
+      <div class="side-web-title">
       <nav>
         <ul>
           <li>
