--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="container-satu">
     <aside class="sidebar">
       <div class="side-web-title">
+      </div>
       <nav>
         <ul>
           <li>
